# ESP32

AG_ESP32MIN1/AG_ESP32MIN1/: CMakeLists.txt  platformio.ini
AG_ESP32MIN1/AG_ESP32MIN1/include/: flash.h  main.h  uart.h  wifi_user.h
AG_ESP32MIN1/AG_ESP32MIN1/src/: CMakeLists.txt  flash.cpp  main.cpp  uart.cpp  wifi_user.cpp
